modifiquei conteudo e foooter

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
             <h4>meus principais hobbys, digamos assim.</h4></p>
             <br>
             <p><h3>Espero que possam conhecer um pouco mais sobre mim!</h3></p>
-                
+
+            <img src="d:\Users\p.silva\Downloads\HIGH.png">
 
         </div>
 
     <div>
         <div id="footer">
+            <span>
+                copyright 
+            moro praia grande-  modificado pelo PEDRO GABRIEL OLIVEIRA DA SILVA
+            </span> copyright 
+            moro praia grande
 
         </div>
 
