Troquei o nome para BlogGuilherme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="Blog">
+    <div id="BlogGuilherme">
 
         <div id="header">
             <nav id="menu">
